--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -91,7 +91,8 @@ set(ARROW_BUILD_STATIC ON)
 set(ARROW_BUILD_TESTS OFF)
 set(ARROW_ENABLE_TIMING_TESTS OFF)
 set(ARROW_FILESYSTEM ON)
-#set(ARROW_WITH_ZSTD ON)
+set(ARROW_WITH_ZSTD ON)
+set(ARROW_WITH_LZ4 ON)
 set(ARROW_HDFS OFF)
 string(TOLOWER ${CMAKE_BUILD_TYPE} LOWERCASE_BUILD_TYPE)
 string(TOUPPER ${CMAKE_BUILD_TYPE} UPPERCASE_BUILD_TYPE)
@@ -747,9 +748,9 @@ if(ARROW_BUILD_EXAMPLES)
   add_subdirectory(examples/arrow)
 endif()
 
-install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/../LICENSE.txt
-              ${CMAKE_CURRENT_SOURCE_DIR}/../NOTICE.txt
-              ${CMAKE_CURRENT_SOURCE_DIR}/README.md DESTINATION "${ARROW_DOC_DIR}")
+# install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/../LICENSE.txt
+#               ${CMAKE_CURRENT_SOURCE_DIR}/../NOTICE.txt
+#               ${CMAKE_CURRENT_SOURCE_DIR}/README.md DESTINATION "${ARROW_DOC_DIR}")
 
 install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/gdb_arrow.py DESTINATION "${ARROW_GDB_DIR}")
 
