--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -91,6 +91,7 @@ set(ARROW_BUILD_STATIC ON)
 set(ARROW_BUILD_TESTS OFF)
 set(ARROW_ENABLE_TIMING_TESTS OFF)
 set(ARROW_FILESYSTEM ON)
+set(ARROW_PARQUET ON)
 set(ARROW_WITH_ZSTD OFF)
 set(ARROW_WITH_LZ4 ON)
 set(ARROW_HDFS OFF)
