--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,7 +92,7 @@ set(ARROW_BUILD_TESTS OFF)
 set(ARROW_ENABLE_TIMING_TESTS OFF)
 set(ARROW_FILESYSTEM ON)
 set(ARROW_PARQUET ON)
-set(ARROW_WITH_ZSTD OFF)
+set(ARROW_WITH_ZSTD ON)
 set(ARROW_WITH_LZ4 ON)
 set(ARROW_HDFS OFF)
 string(TOLOWER ${CMAKE_BUILD_TYPE} LOWERCASE_BUILD_TYPE)
